--- a/components/Text/Text.module.css
+++ b/components/Text/Text.module.css
@@ -9,6 +9,7 @@
 }
 
 .h3 {
+  margin: 0;
   font-size: 16px;
   font-weight: 600;
 }
